# Codeit-AI-1team-LLM-project

./: .gitignore  CLAUDE.md  Dockerfile  EDA_report.md  README.md  main.py  map_chromadb_ids.py  pyproject.toml  requirements.txt  run_evaluation.py  run_langsmith_experiment.py
RAG_pipeline_v1/: main.py  rag_config.py  rag_data_processing.py  rag_evaluator.py  rag_pipeline.py  rag_retriever.py
data/: data_list.csv
data_pipeline_for_RAG/: document_chunker.py  main_preprocess.py  preprocess_config.py  preprocess_pipeline.py  requirements.txt  text_cleaner.py  text_extractor.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
src/RAG_pipeline_v1/: rag_evaluator.py  rag_retriever.py
src/embedding/: rag_data_processing.py
src/evaluation/: compare_experiments.py  eval_ragas.py  evaluator.py  experiment_tracker.py  langsmith_evaluator.py  metrics.py  run_experiment.py  test_queries.json  test_queries_mapped.json
src/generator/: generator.py  generator_gguf.py  generator_local.py  rag_pipeline.py
src/loader/: generate_synthetic.py  main_preprocess.py  map_chromadb_ids.py  preprocess_pipeline.py  transform_langsmith.py
src/prompts/: dynamic_prompts.py
src/retriever/: rag_evaluator.py  rag_retriever.py  retriever.py
src/utils/: config.py  preprocess_config.py  rag_config.py
src/visualization/: chatbot_app.py  streamlit_app.py  vector_db_loader.py
